langtools/test/tools/javac/generics/inference/6650759/T6650759m.out
T6650759m.java:43:36: compiler.err.prob.found.req: (compiler.misc.incompatible.types), java.util.List<? super java.lang.Integer>, java.util.List<? super java.lang.String>
1 error
